parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    IMPORT

Grammar

Rule 0     S' -> code
Rule 1     code -> stmts
Rule 2     stmts -> stmt
Rule 3     stmts -> stmt COLON stmts
Rule 4     stmts -> stmt NEWLINE stmts
Rule 5     stmt -> expr
Rule 6     stmt -> assign
Rule 7     stmt -> empty
Rule 8     stmt -> function
Rule 9     stmt -> if
Rule 10    stmt -> while
Rule 11    stmt -> for
Rule 12    stmt -> return
Rule 13    stmt -> class
Rule 14    stmt -> comment
Rule 15    comment -> SLCOM
Rule 16    comment -> HSCOM
Rule 17    comment -> MLCOM
Rule 18    suite -> stmt
Rule 19    suite -> LCBRACK stmts RCBRACK
Rule 20    empty -> <empty>
Rule 21    expr -> call
Rule 22    expr -> const
Rule 23    const -> NUMBER
Rule 24    const -> FLOAT
Rule 25    const -> CHAR
Rule 26    const -> STRING
Rule 27    expr -> array
Rule 28    arg_list -> LPAREN RPAREN
Rule 29    arg_list -> LPAREN expr RPAREN
Rule 30    arg_list -> LPAREN lst RPAREN
Rule 31    array -> LSBRACK lst RSBRACK
Rule 32    array -> LSBRACK expr RSBRACK
Rule 33    lst -> expr COMMA
Rule 34    lst -> expr COMMA lst
Rule 35    lst -> expr COMMA expr
Rule 36    expr -> id LSBRACK expr RSBRACK
Rule 37    expr -> id
Rule 38    expr -> expr PLUS expr
Rule 39    expr -> expr MINUS expr
Rule 40    expr -> expr TIMES expr
Rule 41    expr -> expr DIVIDE expr
Rule 42    expr -> expr DEQUALS expr
Rule 43    expr -> expr NEQUALS expr
Rule 44    expr -> expr RABRACK expr
Rule 45    expr -> expr LABRACK expr
Rule 46    expr -> expr GEQUALS expr
Rule 47    expr -> expr LEQUALS expr
Rule 48    expr -> LPAREN expr RPAREN
Rule 49    method -> NAME
Rule 50    method -> method DOT NAME
Rule 51    call -> method DOT NAME arg_list
Rule 52    call -> NAME arg_list
Rule 53    assign -> id LSBRACK expr RSBRACK EQUALS assign
Rule 54    assign -> id LSBRACK expr RSBRACK EQUALS expr
Rule 55    assign -> id EQUALS assign
Rule 56    assign -> id EQUALS expr
Rule 57    id -> NAME method
Rule 58    id -> method
Rule 59    function -> FUNC id arg_list suite
Rule 60    if -> IF expr suite else
Rule 61    if -> IF expr suite
Rule 62    else -> ELSE suite
Rule 63    while -> WHILE expr suite
Rule 64    return -> RETURN expr
Rule 65    class -> CLASS NAME suite
Rule 66    for -> FOR expr IN expr DDOT expr suite

Terminals, with rules where they appear

CHAR                 : 25
CLASS                : 65
COLON                : 3
COMMA                : 33 34 35
DDOT                 : 66
DEQUALS              : 42
DIVIDE               : 41
DOT                  : 50 51
ELSE                 : 62
EQUALS               : 53 54 55 56
FLOAT                : 24
FOR                  : 66
FUNC                 : 59
GEQUALS              : 46
HSCOM                : 16
IF                   : 60 61
IMPORT               : 
IN                   : 66
LABRACK              : 45
LCBRACK              : 19
LEQUALS              : 47
LPAREN               : 28 29 30 48
LSBRACK              : 31 32 36 53 54
MINUS                : 39
MLCOM                : 17
NAME                 : 49 50 51 52 57 65
NEQUALS              : 43
NEWLINE              : 4
NUMBER               : 23
PLUS                 : 38
RABRACK              : 44
RCBRACK              : 19
RETURN               : 64
RPAREN               : 28 29 30 48
RSBRACK              : 31 32 36 53 54
SLCOM                : 15
STRING               : 26
TIMES                : 40
WHILE                : 63
error                : 

Nonterminals, with rules where they appear

arg_list             : 51 52 59
array                : 27
assign               : 6 53 55
call                 : 21
class                : 13
code                 : 0
comment              : 14
const                : 22
else                 : 60
empty                : 7
expr                 : 5 29 32 33 34 35 35 36 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 53 54 54 56 60 61 63 64 66 66 66
for                  : 11
function             : 8
id                   : 36 37 53 54 55 56 59
if                   : 9
lst                  : 30 31 34
method               : 50 51 57 58
return               : 12
stmt                 : 2 3 4 18
stmts                : 1 3 4 19
suite                : 59 60 61 62 63 65 66
while                : 10

Parsing method: LALR

state 0

    (0) S' -> . code
    (1) code -> . stmts
    (2) stmts -> . stmt
    (3) stmts -> . stmt COLON stmts
    (4) stmts -> . stmt NEWLINE stmts
    (5) stmt -> . expr
    (6) stmt -> . assign
    (7) stmt -> . empty
    (8) stmt -> . function
    (9) stmt -> . if
    (10) stmt -> . while
    (11) stmt -> . for
    (12) stmt -> . return
    (13) stmt -> . class
    (14) stmt -> . comment
    (21) expr -> . call
    (22) expr -> . const
    (27) expr -> . array
    (36) expr -> . id LSBRACK expr RSBRACK
    (37) expr -> . id
    (38) expr -> . expr PLUS expr
    (39) expr -> . expr MINUS expr
    (40) expr -> . expr TIMES expr
    (41) expr -> . expr DIVIDE expr
    (42) expr -> . expr DEQUALS expr
    (43) expr -> . expr NEQUALS expr
    (44) expr -> . expr RABRACK expr
    (45) expr -> . expr LABRACK expr
    (46) expr -> . expr GEQUALS expr
    (47) expr -> . expr LEQUALS expr
    (48) expr -> . LPAREN expr RPAREN
    (53) assign -> . id LSBRACK expr RSBRACK EQUALS assign
    (54) assign -> . id LSBRACK expr RSBRACK EQUALS expr
    (55) assign -> . id EQUALS assign
    (56) assign -> . id EQUALS expr
    (20) empty -> .
    (59) function -> . FUNC id arg_list suite
    (60) if -> . IF expr suite else
    (61) if -> . IF expr suite
    (63) while -> . WHILE expr suite
    (66) for -> . FOR expr IN expr DDOT expr suite
    (64) return -> . RETURN expr
    (65) class -> . CLASS NAME suite
    (15) comment -> . SLCOM
    (16) comment -> . HSCOM
    (17) comment -> . MLCOM
    (51) call -> . method DOT NAME arg_list
    (52) call -> . NAME arg_list
    (23) const -> . NUMBER
    (24) const -> . FLOAT
    (25) const -> . CHAR
    (26) const -> . STRING
    (31) array -> . LSBRACK lst RSBRACK
    (32) array -> . LSBRACK expr RSBRACK
    (57) id -> . NAME method
    (58) id -> . method
    (49) method -> . NAME
    (50) method -> . method DOT NAME

    LPAREN          shift and go to state 19
    COLON           reduce using rule 20 (empty -> .)
    NEWLINE         reduce using rule 20 (empty -> .)
    $end            reduce using rule 20 (empty -> .)
    FUNC            shift and go to state 20
    IF              shift and go to state 21
    WHILE           shift and go to state 22
    FOR             shift and go to state 23
    RETURN          shift and go to state 24
    CLASS           shift and go to state 25
    SLCOM           shift and go to state 27
    HSCOM           shift and go to state 28
    MLCOM           shift and go to state 29
    NAME            shift and go to state 26
    NUMBER          shift and go to state 31
    FLOAT           shift and go to state 32
    CHAR            shift and go to state 33
    STRING          shift and go to state 34
    LSBRACK         shift and go to state 18

    code                           shift and go to state 1
    stmts                          shift and go to state 2
    stmt                           shift and go to state 3
    expr                           shift and go to state 4
    assign                         shift and go to state 5
    empty                          shift and go to state 6
    function                       shift and go to state 7
    if                             shift and go to state 8
    while                          shift and go to state 9
    for                            shift and go to state 10
    return                         shift and go to state 11
    class                          shift and go to state 12
    comment                        shift and go to state 13
    call                           shift and go to state 14
    const                          shift and go to state 15
    array                          shift and go to state 16
    id                             shift and go to state 17
    method                         shift and go to state 30

state 1

    (0) S' -> code .



state 2

    (1) code -> stmts .

    $end            reduce using rule 1 (code -> stmts .)


state 3

    (2) stmts -> stmt .
    (3) stmts -> stmt . COLON stmts
    (4) stmts -> stmt . NEWLINE stmts

    $end            reduce using rule 2 (stmts -> stmt .)
    RCBRACK         reduce using rule 2 (stmts -> stmt .)
    COLON           shift and go to state 35
    NEWLINE         shift and go to state 36


state 4

    (5) stmt -> expr .
    (38) expr -> expr . PLUS expr
    (39) expr -> expr . MINUS expr
    (40) expr -> expr . TIMES expr
    (41) expr -> expr . DIVIDE expr
    (42) expr -> expr . DEQUALS expr
    (43) expr -> expr . NEQUALS expr
    (44) expr -> expr . RABRACK expr
    (45) expr -> expr . LABRACK expr
    (46) expr -> expr . GEQUALS expr
    (47) expr -> expr . LEQUALS expr

    COLON           reduce using rule 5 (stmt -> expr .)
    NEWLINE         reduce using rule 5 (stmt -> expr .)
    $end            reduce using rule 5 (stmt -> expr .)
    RCBRACK         reduce using rule 5 (stmt -> expr .)
    ELSE            reduce using rule 5 (stmt -> expr .)
    PLUS            shift and go to state 37
    MINUS           shift and go to state 38
    TIMES           shift and go to state 39
    DIVIDE          shift and go to state 40
    DEQUALS         shift and go to state 41
    NEQUALS         shift and go to state 42
    RABRACK         shift and go to state 43
    LABRACK         shift and go to state 44
    GEQUALS         shift and go to state 45
    LEQUALS         shift and go to state 46


state 5

    (6) stmt -> assign .

    COLON           reduce using rule 6 (stmt -> assign .)
    NEWLINE         reduce using rule 6 (stmt -> assign .)
    $end            reduce using rule 6 (stmt -> assign .)
    RCBRACK         reduce using rule 6 (stmt -> assign .)
    ELSE            reduce using rule 6 (stmt -> assign .)


state 6

    (7) stmt -> empty .

    COLON           reduce using rule 7 (stmt -> empty .)
    NEWLINE         reduce using rule 7 (stmt -> empty .)
    $end            reduce using rule 7 (stmt -> empty .)
    RCBRACK         reduce using rule 7 (stmt -> empty .)
    ELSE            reduce using rule 7 (stmt -> empty .)


state 7

    (8) stmt -> function .

    COLON           reduce using rule 8 (stmt -> function .)
    NEWLINE         reduce using rule 8 (stmt -> function .)
    $end            reduce using rule 8 (stmt -> function .)
    RCBRACK         reduce using rule 8 (stmt -> function .)
    ELSE            reduce using rule 8 (stmt -> function .)


state 8

    (9) stmt -> if .

    COLON           reduce using rule 9 (stmt -> if .)
    NEWLINE         reduce using rule 9 (stmt -> if .)
    $end            reduce using rule 9 (stmt -> if .)
    RCBRACK         reduce using rule 9 (stmt -> if .)
    ELSE            reduce using rule 9 (stmt -> if .)


state 9

    (10) stmt -> while .

    COLON           reduce using rule 10 (stmt -> while .)
    NEWLINE         reduce using rule 10 (stmt -> while .)
    $end            reduce using rule 10 (stmt -> while .)
    RCBRACK         reduce using rule 10 (stmt -> while .)
    ELSE            reduce using rule 10 (stmt -> while .)


state 10

    (11) stmt -> for .

    COLON           reduce using rule 11 (stmt -> for .)
    NEWLINE         reduce using rule 11 (stmt -> for .)
    $end            reduce using rule 11 (stmt -> for .)
    RCBRACK         reduce using rule 11 (stmt -> for .)
    ELSE            reduce using rule 11 (stmt -> for .)


state 11

    (12) stmt -> return .

    COLON           reduce using rule 12 (stmt -> return .)
    NEWLINE         reduce using rule 12 (stmt -> return .)
    $end            reduce using rule 12 (stmt -> return .)
    RCBRACK         reduce using rule 12 (stmt -> return .)
    ELSE            reduce using rule 12 (stmt -> return .)


state 12

    (13) stmt -> class .

    COLON           reduce using rule 13 (stmt -> class .)
    NEWLINE         reduce using rule 13 (stmt -> class .)
    $end            reduce using rule 13 (stmt -> class .)
    RCBRACK         reduce using rule 13 (stmt -> class .)
    ELSE            reduce using rule 13 (stmt -> class .)


state 13

    (14) stmt -> comment .

    COLON           reduce using rule 14 (stmt -> comment .)
    NEWLINE         reduce using rule 14 (stmt -> comment .)
    $end            reduce using rule 14 (stmt -> comment .)
    RCBRACK         reduce using rule 14 (stmt -> comment .)
    ELSE            reduce using rule 14 (stmt -> comment .)


state 14

    (21) expr -> call .

    PLUS            reduce using rule 21 (expr -> call .)
    MINUS           reduce using rule 21 (expr -> call .)
    TIMES           reduce using rule 21 (expr -> call .)
    DIVIDE          reduce using rule 21 (expr -> call .)
    DEQUALS         reduce using rule 21 (expr -> call .)
    NEQUALS         reduce using rule 21 (expr -> call .)
    RABRACK         reduce using rule 21 (expr -> call .)
    LABRACK         reduce using rule 21 (expr -> call .)
    GEQUALS         reduce using rule 21 (expr -> call .)
    LEQUALS         reduce using rule 21 (expr -> call .)
    COLON           reduce using rule 21 (expr -> call .)
    NEWLINE         reduce using rule 21 (expr -> call .)
    $end            reduce using rule 21 (expr -> call .)
    RSBRACK         reduce using rule 21 (expr -> call .)
    COMMA           reduce using rule 21 (expr -> call .)
    RPAREN          reduce using rule 21 (expr -> call .)
    LCBRACK         reduce using rule 21 (expr -> call .)
    LPAREN          reduce using rule 21 (expr -> call .)
    FUNC            reduce using rule 21 (expr -> call .)
    IF              reduce using rule 21 (expr -> call .)
    WHILE           reduce using rule 21 (expr -> call .)
    FOR             reduce using rule 21 (expr -> call .)
    RETURN          reduce using rule 21 (expr -> call .)
    CLASS           reduce using rule 21 (expr -> call .)
    SLCOM           reduce using rule 21 (expr -> call .)
    HSCOM           reduce using rule 21 (expr -> call .)
    MLCOM           reduce using rule 21 (expr -> call .)
    NAME            reduce using rule 21 (expr -> call .)
    NUMBER          reduce using rule 21 (expr -> call .)
    FLOAT           reduce using rule 21 (expr -> call .)
    CHAR            reduce using rule 21 (expr -> call .)
    STRING          reduce using rule 21 (expr -> call .)
    LSBRACK         reduce using rule 21 (expr -> call .)
    ELSE            reduce using rule 21 (expr -> call .)
    RCBRACK         reduce using rule 21 (expr -> call .)
    IN              reduce using rule 21 (expr -> call .)
    DDOT            reduce using rule 21 (expr -> call .)


state 15

    (22) expr -> const .

    PLUS            reduce using rule 22 (expr -> const .)
    MINUS           reduce using rule 22 (expr -> const .)
    TIMES           reduce using rule 22 (expr -> const .)
    DIVIDE          reduce using rule 22 (expr -> const .)
    DEQUALS         reduce using rule 22 (expr -> const .)
    NEQUALS         reduce using rule 22 (expr -> const .)
    RABRACK         reduce using rule 22 (expr -> const .)
    LABRACK         reduce using rule 22 (expr -> const .)
    GEQUALS         reduce using rule 22 (expr -> const .)
    LEQUALS         reduce using rule 22 (expr -> const .)
    COLON           reduce using rule 22 (expr -> const .)
    NEWLINE         reduce using rule 22 (expr -> const .)
    $end            reduce using rule 22 (expr -> const .)
    RSBRACK         reduce using rule 22 (expr -> const .)
    COMMA           reduce using rule 22 (expr -> const .)
    RPAREN          reduce using rule 22 (expr -> const .)
    LCBRACK         reduce using rule 22 (expr -> const .)
    LPAREN          reduce using rule 22 (expr -> const .)
    FUNC            reduce using rule 22 (expr -> const .)
    IF              reduce using rule 22 (expr -> const .)
    WHILE           reduce using rule 22 (expr -> const .)
    FOR             reduce using rule 22 (expr -> const .)
    RETURN          reduce using rule 22 (expr -> const .)
    CLASS           reduce using rule 22 (expr -> const .)
    SLCOM           reduce using rule 22 (expr -> const .)
    HSCOM           reduce using rule 22 (expr -> const .)
    MLCOM           reduce using rule 22 (expr -> const .)
    NAME            reduce using rule 22 (expr -> const .)
    NUMBER          reduce using rule 22 (expr -> const .)
    FLOAT           reduce using rule 22 (expr -> const .)
    CHAR            reduce using rule 22 (expr -> const .)
    STRING          reduce using rule 22 (expr -> const .)
    LSBRACK         reduce using rule 22 (expr -> const .)
    ELSE            reduce using rule 22 (expr -> const .)
    RCBRACK         reduce using rule 22 (expr -> const .)
    IN              reduce using rule 22 (expr -> const .)
    DDOT            reduce using rule 22 (expr -> const .)


state 16

    (27) expr -> array .

    PLUS            reduce using rule 27 (expr -> array .)
    MINUS           reduce using rule 27 (expr -> array .)
    TIMES           reduce using rule 27 (expr -> array .)
    DIVIDE          reduce using rule 27 (expr -> array .)
    DEQUALS         reduce using rule 27 (expr -> array .)
    NEQUALS         reduce using rule 27 (expr -> array .)
    RABRACK         reduce using rule 27 (expr -> array .)
    LABRACK         reduce using rule 27 (expr -> array .)
    GEQUALS         reduce using rule 27 (expr -> array .)
    LEQUALS         reduce using rule 27 (expr -> array .)
    COLON           reduce using rule 27 (expr -> array .)
    NEWLINE         reduce using rule 27 (expr -> array .)
    $end            reduce using rule 27 (expr -> array .)
    RSBRACK         reduce using rule 27 (expr -> array .)
    COMMA           reduce using rule 27 (expr -> array .)
    RPAREN          reduce using rule 27 (expr -> array .)
    LCBRACK         reduce using rule 27 (expr -> array .)
    LPAREN          reduce using rule 27 (expr -> array .)
    FUNC            reduce using rule 27 (expr -> array .)
    IF              reduce using rule 27 (expr -> array .)
    WHILE           reduce using rule 27 (expr -> array .)
    FOR             reduce using rule 27 (expr -> array .)
    RETURN          reduce using rule 27 (expr -> array .)
    CLASS           reduce using rule 27 (expr -> array .)
    SLCOM           reduce using rule 27 (expr -> array .)
    HSCOM           reduce using rule 27 (expr -> array .)
    MLCOM           reduce using rule 27 (expr -> array .)
    NAME            reduce using rule 27 (expr -> array .)
    NUMBER          reduce using rule 27 (expr -> array .)
    FLOAT           reduce using rule 27 (expr -> array .)
    CHAR            reduce using rule 27 (expr -> array .)
    STRING          reduce using rule 27 (expr -> array .)
    LSBRACK         reduce using rule 27 (expr -> array .)
    ELSE            reduce using rule 27 (expr -> array .)
    RCBRACK         reduce using rule 27 (expr -> array .)
    IN              reduce using rule 27 (expr -> array .)
    DDOT            reduce using rule 27 (expr -> array .)


state 17

    (36) expr -> id . LSBRACK expr RSBRACK
    (37) expr -> id .
    (53) assign -> id . LSBRACK expr RSBRACK EQUALS assign
    (54) assign -> id . LSBRACK expr RSBRACK EQUALS expr
    (55) assign -> id . EQUALS assign
    (56) assign -> id . EQUALS expr

    LSBRACK         shift and go to state 47
    PLUS            reduce using rule 37 (expr -> id .)
    MINUS           reduce using rule 37 (expr -> id .)
    TIMES           reduce using rule 37 (expr -> id .)
    DIVIDE          reduce using rule 37 (expr -> id .)
    DEQUALS         reduce using rule 37 (expr -> id .)
    NEQUALS         reduce using rule 37 (expr -> id .)
    RABRACK         reduce using rule 37 (expr -> id .)
    LABRACK         reduce using rule 37 (expr -> id .)
    GEQUALS         reduce using rule 37 (expr -> id .)
    LEQUALS         reduce using rule 37 (expr -> id .)
    COLON           reduce using rule 37 (expr -> id .)
    NEWLINE         reduce using rule 37 (expr -> id .)
    $end            reduce using rule 37 (expr -> id .)
    RCBRACK         reduce using rule 37 (expr -> id .)
    ELSE            reduce using rule 37 (expr -> id .)
    EQUALS          shift and go to state 48


state 18

    (31) array -> LSBRACK . lst RSBRACK
    (32) array -> LSBRACK . expr RSBRACK
    (33) lst -> . expr COMMA
    (34) lst -> . expr COMMA lst
    (35) lst -> . expr COMMA expr
    (21) expr -> . call
    (22) expr -> . const
    (27) expr -> . array
    (36) expr -> . id LSBRACK expr RSBRACK
    (37) expr -> . id
    (38) expr -> . expr PLUS expr
    (39) expr -> . expr MINUS expr
    (40) expr -> . expr TIMES expr
    (41) expr -> . expr DIVIDE expr
    (42) expr -> . expr DEQUALS expr
    (43) expr -> . expr NEQUALS expr
    (44) expr -> . expr RABRACK expr
    (45) expr -> . expr LABRACK expr
    (46) expr -> . expr GEQUALS expr
    (47) expr -> . expr LEQUALS expr
    (48) expr -> . LPAREN expr RPAREN
    (51) call -> . method DOT NAME arg_list
    (52) call -> . NAME arg_list
    (23) const -> . NUMBER
    (24) const -> . FLOAT
    (25) const -> . CHAR
    (26) const -> . STRING
    (31) array -> . LSBRACK lst RSBRACK
    (32) array -> . LSBRACK expr RSBRACK
    (57) id -> . NAME method
    (58) id -> . method
    (49) method -> . NAME
    (50) method -> . method DOT NAME

    LPAREN          shift and go to state 19
    NAME            shift and go to state 26
    NUMBER          shift and go to state 31
    FLOAT           shift and go to state 32
    CHAR            shift and go to state 33
    STRING          shift and go to state 34
    LSBRACK         shift and go to state 18

    lst                            shift and go to state 49
    expr                           shift and go to state 50
    call                           shift and go to state 14
    const                          shift and go to state 15
    array                          shift and go to state 16
    id                             shift and go to state 51
    method                         shift and go to state 30

state 19

    (48) expr -> LPAREN . expr RPAREN
    (21) expr -> . call
    (22) expr -> . const
    (27) expr -> . array
    (36) expr -> . id LSBRACK expr RSBRACK
    (37) expr -> . id
    (38) expr -> . expr PLUS expr
    (39) expr -> . expr MINUS expr
    (40) expr -> . expr TIMES expr
    (41) expr -> . expr DIVIDE expr
    (42) expr -> . expr DEQUALS expr
    (43) expr -> . expr NEQUALS expr
    (44) expr -> . expr RABRACK expr
    (45) expr -> . expr LABRACK expr
    (46) expr -> . expr GEQUALS expr
    (47) expr -> . expr LEQUALS expr
    (48) expr -> . LPAREN expr RPAREN
    (51) call -> . method DOT NAME arg_list
    (52) call -> . NAME arg_list
    (23) const -> . NUMBER
    (24) const -> . FLOAT
    (25) const -> . CHAR
    (26) const -> . STRING
    (31) array -> . LSBRACK lst RSBRACK
    (32) array -> . LSBRACK expr RSBRACK
    (57) id -> . NAME method
    (58) id -> . method
    (49) method -> . NAME
    (50) method -> . method DOT NAME

    LPAREN          shift and go to state 19
    NAME            shift and go to state 26
    NUMBER          shift and go to state 31
    FLOAT           shift and go to state 32
    CHAR            shift and go to state 33
    STRING          shift and go to state 34
    LSBRACK         shift and go to state 18

    expr                           shift and go to state 52
    call                           shift and go to state 14
    const                          shift and go to state 15
    array                          shift and go to state 16
    id                             shift and go to state 51
    method                         shift and go to state 30

state 20

    (59) function -> FUNC . id arg_list suite
    (57) id -> . NAME method
    (58) id -> . method
    (49) method -> . NAME
    (50) method -> . method DOT NAME

    NAME            shift and go to state 54

    id                             shift and go to state 53
    method                         shift and go to state 55

state 21

    (60) if -> IF . expr suite else
    (61) if -> IF . expr suite
    (21) expr -> . call
    (22) expr -> . const
    (27) expr -> . array
    (36) expr -> . id LSBRACK expr RSBRACK
    (37) expr -> . id
    (38) expr -> . expr PLUS expr
    (39) expr -> . expr MINUS expr
    (40) expr -> . expr TIMES expr
    (41) expr -> . expr DIVIDE expr
    (42) expr -> . expr DEQUALS expr
    (43) expr -> . expr NEQUALS expr
    (44) expr -> . expr RABRACK expr
    (45) expr -> . expr LABRACK expr
    (46) expr -> . expr GEQUALS expr
    (47) expr -> . expr LEQUALS expr
    (48) expr -> . LPAREN expr RPAREN
    (51) call -> . method DOT NAME arg_list
    (52) call -> . NAME arg_list
    (23) const -> . NUMBER
    (24) const -> . FLOAT
    (25) const -> . CHAR
    (26) const -> . STRING
    (31) array -> . LSBRACK lst RSBRACK
    (32) array -> . LSBRACK expr RSBRACK
    (57) id -> . NAME method
    (58) id -> . method
    (49) method -> . NAME
    (50) method -> . method DOT NAME

    LPAREN          shift and go to state 19
    NAME            shift and go to state 26
    NUMBER          shift and go to state 31
    FLOAT           shift and go to state 32
    CHAR            shift and go to state 33
    STRING          shift and go to state 34
    LSBRACK         shift and go to state 18

    expr                           shift and go to state 56
    call                           shift and go to state 14
    const                          shift and go to state 15
    array                          shift and go to state 16
    id                             shift and go to state 51
    method                         shift and go to state 30

state 22

    (63) while -> WHILE . expr suite
    (21) expr -> . call
    (22) expr -> . const
    (27) expr -> . array
    (36) expr -> . id LSBRACK expr RSBRACK
    (37) expr -> . id
    (38) expr -> . expr PLUS expr
    (39) expr -> . expr MINUS expr
    (40) expr -> . expr TIMES expr
    (41) expr -> . expr DIVIDE expr
    (42) expr -> . expr DEQUALS expr
    (43) expr -> . expr NEQUALS expr
    (44) expr -> . expr RABRACK expr
    (45) expr -> . expr LABRACK expr
    (46) expr -> . expr GEQUALS expr
    (47) expr -> . expr LEQUALS expr
    (48) expr -> . LPAREN expr RPAREN
    (51) call -> . method DOT NAME arg_list
    (52) call -> . NAME arg_list
    (23) const -> . NUMBER
    (24) const -> . FLOAT
    (25) const -> . CHAR
    (26) const -> . STRING
    (31) array -> . LSBRACK lst RSBRACK
    (32) array -> . LSBRACK expr RSBRACK
    (57) id -> . NAME method
    (58) id -> . method
    (49) method -> . NAME
    (50) method -> . method DOT NAME

    LPAREN          shift and go to state 19
    NAME            shift and go to state 26
    NUMBER          shift and go to state 31
    FLOAT           shift and go to state 32
    CHAR            shift and go to state 33
    STRING          shift and go to state 34
    LSBRACK         shift and go to state 18

    expr                           shift and go to state 57
    call                           shift and go to state 14
    const                          shift and go to state 15
    array                          shift and go to state 16
    id                             shift and go to state 51
    method                         shift and go to state 30

state 23
